2006-08-24  Philipp Sehmisch  <tmw@crushnet.org>
	
	* src/engine.cpp: Scrolling speed no longer affected by framerate.
	* src/map.cpp, scr/map.h: Overlay speed no longer affected by
	framerate.

2006-08-24  Frode Lindeijer  <f.lindeijer@gmail.com>

	* data/graphics/sprites/item004.png, data/graphics/sprites/item005.png,
	data/graphics/sprites/Makefile.am,
	data/graphics/items/armor-legs-cottonshorts,
	data/graphics/items/armor-legs-jeanshorts: Added the equip graphics of
	the short jeans and the cotton shorts and an inventory icon of the
	cotton shorts. Also added all added files to the makefile.
	
2006-08-23  Philipp Sehmisch  <tmw@crushnet.org>

	* data/maps/new_7-1.tmx.gz: fixed a minor mapping bug reported on the
	forum (no new walkmap required).
	* data/maps/new_9-1.tmx.gz: fixed two minor mapping bugs (new walkmap
	required).

2006-08-22  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* configure.ac, data/graphics/images/ambient,
	data/graphics/images/ambient/Makefile.am,
	data/graphics/images/Makefile.am: Updated makefiles to account for new
	ambient images and changed the version from 0.0.20.1 to 0.0.21.

2006-08-21  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* The Mana World.dev, tmw.cbp: Updated project files.

2006-08-21  Philipp Sehmisch  <tmw@crushnet.org>

	* src/mapreader.cpp: Added logic for initialisation of the overlays.
	* src/map.cpp, src/map.h: Code for updating and drawing the overlays.
	* src/engine.cpp, src/engine.h: Added smooth scrolling and the call
	to draw the overlays.
	* data/maps/new_1-1.tmx.gz, data/graphics/new_7-1.tmx.gz,
	data/graphics/images/ambient/sandstorm.png: Added sandstorm effect
	to the desert maps outside of the city (feedback, please).
	* data/maps/new_2-1.tmx.gz, data/maps/new_4-1.tmx.gz,
	data/maps/new_5-1.tmx.gz, data/graphics/images/ambient/spotlight.png
	Added spotlight effect to the cave maps (feedback, please)
	* data/graphics/maps/new_9-1.tmx.gz,
	data/graphics/images/ambient/clouds.png: